# mind-the-gap-replication

./: .gitignore  README.md  pyproject.toml
data/: 2026-02-25.parquet  2026-02-27.parquet  2026-03-02.parquet  2026-03-03.parquet  2026-03-05.parquet
scripts/: 1_prepare_data.py  2_run_analysis.py  estimate_dose_response.py  fit_gam.R  test_equivalence.py  visualize_results.py
