[project]
name = "mind-the-gap-release"
version = "1.0.0"
description = "Replication package: Ad duration dose-response analysis"
requires-python = ">=3.11"
authors = [
    { name = "Shield Laws Research Team", email = "alex@tavernresearch.com" }
]
dependencies = [
    "polars>=0.20.0",
    "statsmodels>=0.14.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.14.0",
    "matplotlib>=3.10.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "pyarrow>=23.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []

[tool.uv]
package = false
